# ocean-acidification-dashboard

./: .gitignore  API_ENDPOINTS_COMPREHENSIVE.md  COMPUTATIONAL_RESOURCE_ANALYSIS.md  COMPUTATIONAL_SUMMARY.md  DATABASE_SCHEMA_ANALYSIS.md  DB_HISTORY_CLEANUP.md  README.md  analysis_nc2tile_structure.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.backend.yml  docker-compose.prod.frontend.yml  docker-compose.prod.yml  docker-compose.yml  fix_parens.py  fix_server.py  mount.sh  mount.sh~  notes  patch_server.py  plot_nc_temps.py  pytest.ini  test_extraction.py  test_hang.py  test_heavy_timeseries.py  test_mixed_requests.py  verify_stats.py
process/: Dockerfile  MAIN.py  README.md  README_CALC_CARBON.md  __init__.py  calc_carbon.py  calc_carbon_grid.py  calc_carbon_grid_shm_memmap.py  calc_carbon_grid_shm_memmap_year_aware.py  calc_carbon_grid_time_batch.py  calc_ph_grid_shm_memmap.py  calc_ph_grid_shm_memmap_opt.py  configs.json  dl.py  extract_bottom.py  ingest_csv_to_sensors_data.py  nc2tile.py  onc_data.json  onc_to_db.py  pyproject.toml  simple_ph_test.py  start.sh  upload_bathymetry.py
process/GPU/: Dockerfile  README.md  calc_carbon_gpu.py  docker-compose.gpu.yml
process/benchmarks/: benchmark_timeseries.py
process/dl2pkg/: __init__.py  cli.py  db.py  (+7 more)
scripts/: NONNA  bathymetry.sh  check_chunks.py  cnvMaster_RGBcoded.py  compute_standalone.py  db_export.sh  db_restore.sh  dl.sh  download_erddap_monthly.py  insert_nc_jobs.py  mergetime.py  migrate_bind_to_volume.sh  migrate_to_unified_nc_jobs.sql  preview_tile.py  pyproject.toml  rechunk.py  test.sh
(+184 files in other folders)
